added the image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="profile-section">
             <!-- Profile Avatar -->
             <div class="profile-avatar">
-                <img src="profile.jpeg" alt="Profile Picture">
+                <img src="static/profile.jpeg" alt="Profile Picture">
             </div>
 
             <!-- Profile Actions -->
