--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Header Banner -->
         <div class="header-banner">
-            <div class="newspaper-overlay"></div>
+            <img src="static/twlight.jpg" alt="Banner Image" class="newspaper-overlay">
         </div>
 
         <!-- Profile Section -->
