--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
         <!-- Navigation Tabs -->
         <div class="nav-tabs">
-            <button class="nav-tab active" onclick="switchTab('posts', this)">Bits /</button>
-            <button class="nav-tab" onclick="switchTab('replies', this)">ssh me /</button>
-            <button class="nav-tab" onclick="switchTab('highlights', this)">Make /</button>
+            <button class="nav-tab active" onclick="switchTab('posts', this)">ssh me /</button>
+            <button class="nav-tab" onclick="switchTab('replies', this)">Make /</button>
+            <button class="nav-tab" onclick="switchTab('highlights', this)">Bits /</button>
             <button class="nav-tab" onclick="switchTab('media', this)">Frames /</button>
         </div>
 
