--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div class="tweets-section">
                 <div class="welcome-message">
                     <span class="wave-emoji">👋</span> yo!, am kwabs, welcome.
+                    <div class="subtitle">backend developer . engineer</div>
                 </div>
 
                 <!-- Dynamic bits will be loaded here -->
