--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <div id="posts-content" class="tab-content active">
             <div class="tweets-section">
                 <div class="welcome-message">
-                    <span class="wave-emoji">👋</span> yo!, am kwabs, welcome.
-                    <div class="subtitle">backend stan . Electrical engineer . Computer Guy</div>
+                    <span class="wave-emoji">👋</span> Yo!, am kwabs, welcome.
+                    <div class="subtitle">Backend stan . Electrical engineer . Computer Guy</div>
                 </div>
 
                 <!-- Dynamic bits will be loaded here -->
