--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Profile Info -->
             <div class="profile-info">
                 <div class="profile-name">
-                    <span class="name">Just Me Being ME</span>
+                    <span class="name">kwabs "NTIM" kwabs</span>
                     <div class="social-icons">
                         <a href="https://x.com/NtimKwabs" target="_blank" class="social-icon">
                             <svg viewBox="0 0 24 24" width="16" height="16">
