--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="welcome-message">
                     <span class="wave-emoji">👋</span> Yo!, am kwabs, welcome.
                     <div class="subtitle">Backend stan . Electrical engineer . Computer Guy</div>
+                    <hr class="intro-separator">
                     <div class="intro-text">
                         Hey! I bet you didn't use the terminal above. Maybe you are just not curious. Anyways, don't mind me, lol!<br><br>
                         
