--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         
                         Depending on my mood, I can be a programmer and sometimes an electrical and electronics engineer... funny, right?<br><br>
                         
-                        Me learning programming has made me learn technologies such as Python (the snake), HTML, CSS, and something called Bootstrap, Django, Flask, and recently Golang (the gopher).Lest I forget,sometimes i feel like hacking into systems but thats for another episode.STAY TUNED!! <br><br>
+                        Me learning programming has made me learn technologies such as Python (the snake), HTML, CSS, and something called Bootstrap, Django, Flask, and recently Golang (the gopher).Lest I forget,sometimes I feel like hacking into systems but thats for another episode.STAY TUNED!! <br><br>
                         <hr class="intro-divider">
                     </div>
                 </div>
