--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                         Depending on my mood, I can be a programmer and sometimes an electrical and electronics engineer... funny, right?<br><br>
                         
                         Me learning programming has made me learn technologies such as Python (the snake), HTML, CSS, and something called Bootstrap, Django, Flask, and recently Golang (the gopher).Lest I forget,sometimes I feel like hacking into systems but thats for another episode.STAY TUNED!! <br><br>
+                    </div>
+                    <div class="activities-list">
+                        Lately I mostly do one of these...<br><br>
+                        * Build backend projects<br>
+                        * Trying to learn drone flying<br>
+                        * Reading some books<br>
+                        * Learning how to write better code<br>
+                        * Sometimes trying to make ends meet, hahaha!!<br><br>
                         <hr class="intro-divider">
                     </div>
                 </div>
