--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                         
                         Me learning programming has made me learn technologies such as Python (the snake), HTML, CSS, and something called Bootstrap, Django, Flask, and recently Golang (the gopher).Lest I forget,sometimes I feel like hacking into systems but thats for another episode.STAY TUNED!! <br><br>
                     </div>
+                    <hr class="section-separator">
                     <div class="activities-list">
                         Lately I mostly do one of these...<br><br>
                         * Build backend projects<br>
