--- a/index.html
+++ b/index.html
@@ -117,6 +117,22 @@
                         * Sometimes trying to make ends meet, hahaha!!<br><br>
                         <hr class="intro-divider">
                     </div>
+                    <div class="tech-stack">
+                        What I happen to use are...<br><br>
+                        <div class="tech-badges">
+                            <span class="tech-badge">Python</span>
+                            <span class="tech-badge">Docker</span>
+                            <span class="tech-badge">Golang</span>
+                            <span class="tech-badge">CSS</span>
+                            <span class="tech-badge">HTML</span>
+                            <span class="tech-badge">Linux</span>
+                            <span class="tech-badge">Flask</span>
+                            <span class="tech-badge">Django</span>
+                            <span class="tech-badge">VSCode</span>
+                            <span class="tech-badge">RabbitMQ</span>
+                            <span class="tech-badge">MongoDB</span>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Dynamic bits will be loaded here -->
