--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <img src="https://skillicons.dev/icons?i=python,go,html,css" alt="Languages" /><br><br>
                         
                         <div class="tech-section-title">Frameworks</div>
-                        <img src="https://skillicons.dev/icons?i=flask,django" alt="Frameworks" /><br><br>
+                        <img src="https://skillicons.dev/icons?i=flask,django,gin,echo" alt="Frameworks" /><br><br>
                         
                         <div class="tech-section-title">Tools</div>
                         <img src="https://skillicons.dev/icons?i=docker,linux,vscode,rabbitmq,mongodb" alt="Tools" />
