skills icons update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <img src="https://skillicons.dev/icons?i=flask,django,gin,echo" alt="Frameworks" /><br><br>
                         
                         <div class="tech-section-title">Tools</div>
-                        <img src="https://skillicons.dev/icons?i=docker,linux,vscode,rabbitmq,mongodb,redis,github,postman" alt="Tools" />
+                        <img src="https://skillicons.dev/icons?i=docker,linux,vscode,rabbitmq,mongodb,redis,github,postman" alt="Tools" style="max-width: 100%;" />
                     </div>
                 </div>
 
