--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         What I happen to use are...<br><br>
                         
                         <div class="tech-section-title">Languages</div>
-                        <img src="https://skillicons.dev/icons?i=python,go,html,css,c++,javascript" alt="Languages" /><br><br>
+                        <img src="https://skillicons.dev/icons?i=python,go,html,css,cpp,javascript" alt="Languages" /><br><br>
                         
                         <div class="tech-section-title">Frameworks</div>
                         <img src="https://skillicons.dev/icons?i=flask,django,gin,echo" alt="Frameworks" /><br><br>
