--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
                         <img src="https://skillicons.dev/icons?i=python,go,html,css,cpp,javascript" alt="Languages" /><br><br>
                         
                         <div class="tech-section-title">Frameworks</div>
-                        <img src="https://skillicons.dev/icons?i=flask,django" alt="Frameworks" />
-                        <span class="tech-badge golang">Gin</span>
-                        <span class="tech-badge golang">Echo</span><br><br>
+                        <img src="https://skillicons.dev/icons?i=flask,django" alt="Frameworks" /><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-left: 4px;"><rect width="48" height="48" rx="4" fill="#00ADD8"/><text x="24" y="30" font-family="Arial, sans-serif" font-size="16" font-weight="bold" fill="white" text-anchor="middle">Gin</text></svg><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-left: 4px;"><rect width="48" height="48" rx="4" fill="#00ADD8"/><text x="24" y="30" font-family="Arial, sans-serif" font-size="14" font-weight="bold" fill="white" text-anchor="middle">Echo</text></svg><br><br>
                         
                         <div class="tech-section-title">Tools</div>
                         <img src="https://skillicons.dev/icons?i=docker,linux,vscode,rabbitmq,mongodb,redis,github,postman" alt="Tools" style="max-width: 100%;" />
