--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <hr class="intro-divider">
                     </div>
                     <div class="tech-stack">
-                        Things I happen to use are...<br><br>
+                        Things I happen to use and learnt are...<br><br>
                         
                         <div class="tech-section-title">Languages and Frameworks</div>
                         <img src="https://skillicons.dev/icons?i=python,go,html,css,cpp,javascript" alt="Languages" /><br>
