--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!-- Navigation Tabs -->
         <div class="nav-tabs">
-            <button class="nav-tab active" onclick="switchTab('posts', this)">echo $WHI /</button>
+            <button class="nav-tab active" onclick="switchTab('posts', this)">echo $USER /</button>
             <button class="nav-tab" onclick="switchTab('replies', this)">Make /</button>
             <button class="nav-tab" onclick="switchTab('highlights', this)">Bits /</button>
             <button class="nav-tab" onclick="switchTab('media', this)">Frames /</button>
