--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Profile Info -->
             <div class="profile-info">
                 <div class="profile-name">
-                    <span class="name">kwabs "NTIM"</span>
+                    <span class="name">kwabs"NTIM"</span>
                     <div class="social-icons">
                         <a href="https://x.com/NtimKwabs" target="_blank" class="social-icon">
                             <svg viewBox="0 0 24 24" width="16" height="16">
@@ -78,7 +78,7 @@
                       <span class="tb-title">About ME! — bash</span>
                     </div>
                     <div id="screen" class="term-screen" tabindex="0">
-                      <div class="line">Welcome to <span style="color:var(--term-accent)">weird-terminal</span>. Type <b>whoami</b> or <b>whyareyouhere</b>.</div>
+                      <div class="line" id="typing-line"></div>
                       <div class="line"><span class="prompt">guest@kwabs</span>:<span class="path">~/random</span>$ <span id="live" class="inputline"></span><span class="cursor" aria-hidden="true"></span></div>
                     </div>
                   </div>
