--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="profile-section">
             <!-- Profile Avatar -->
             <div class="profile-avatar">
-                <img src="static/profile.jpeg" alt="Profile Picture" class="avatar-image">
+                <img src="static/spacechristmas.png" alt="Profile Picture" class="avatar-image">
             </div>
 
             <!-- Profile Actions -->
