--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>kwabsntim</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.jpeg">
     <link rel="stylesheet" href="weirdo.css">
+    <link rel="preload" href="static/spacechristmas.png" as="image">
+    <link rel="preload" href="static/lightchristmas.png" as="image">
+    <link rel="preload" href="static/sunrise.png" as="image">
 </head>
 <body>
     <div class="container">
