cards for experience

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <!-- Card Carousel Section -->
                     <div class="cards-grid">
                         <!-- Card 1 -->
-                        <div class="card-container">
+                        <div class="card-container" style="background-image: url('https://via.placeholder.com/600x300');">
                             <div class="card-content">
                                 <div class="card-pages" data-card="1">
                                     <div class="card-page active">
