--- a/index.html
+++ b/index.html
@@ -145,26 +145,15 @@
                     </div>
                     <hr class="section-separator">
                     
-                    <!-- Card Carousel Section -->
+                    <!-- Work Experience Cards -->
                     <div class="cards-grid">
                         <!-- Card 1 -->
                         <div class="card-container" style="background-image: url('https://via.placeholder.com/600x300');">
                             <div class="card-content">
-                                <div class="card-pages" data-card="1">
-                                    <div class="card-page active">
-                                        <p>Description for project 1 goes here.</p>
-                                    </div>
-                                    <div class="card-page">
-                                        <p>Additional information about project 1.</p>
-                                    </div>
-                                </div>
+                                <p>Description for work experience 1 goes here.</p>
                                 <div class="card-footer">
-                                    <div class="card-dots" data-card="1"></div>
                                     <img src="https://via.placeholder.com/40" alt="Icon" class="card-icon">
-                                </div>
-                                <div class="card-nav">
-                                    <button class="card-nav-btn prev" data-card="1">‹</button>
-                                    <button class="card-nav-btn next" data-card="1">›</button>
+                                    <span class="card-org-name">Organization Name 1</span>
                                 </div>
                             </div>
                         </div>
@@ -172,21 +161,10 @@
                         <!-- Card 2 -->
                         <div class="card-container">
                             <div class="card-content">
-                                <div class="card-pages" data-card="2">
-                                    <div class="card-page active">
-                                        <p>Description for project 2 goes here.</p>
-                                    </div>
-                                    <div class="card-page">
-                                        <p>Additional information about project 2.</p>
-                                    </div>
-                                </div>
+                                <p>Description for work experience 2 goes here.</p>
                                 <div class="card-footer">
-                                    <div class="card-dots" data-card="2"></div>
                                     <img src="https://via.placeholder.com/40" alt="Icon" class="card-icon">
-                                </div>
-                                <div class="card-nav">
-                                    <button class="card-nav-btn prev" data-card="2">‹</button>
-                                    <button class="card-nav-btn next" data-card="2">›</button>
+                                    <span class="card-org-name">Organization Name 2</span>
                                 </div>
                             </div>
                         </div>
@@ -194,21 +172,10 @@
                         <!-- Card 3 -->
                         <div class="card-container">
                             <div class="card-content">
-                                <div class="card-pages" data-card="3">
-                                    <div class="card-page active">
-                                        <p>Description for project 3 goes here.</p>
-                                    </div>
-                                    <div class="card-page">
-                                        <p>Additional information about project 3.</p>
-                                    </div>
-                                </div>
+                                <p>Description for work experience 3 goes here.</p>
                                 <div class="card-footer">
-                                    <div class="card-dots" data-card="3"></div>
                                     <img src="https://via.placeholder.com/40" alt="Icon" class="card-icon">
-                                </div>
-                                <div class="card-nav">
-                                    <button class="card-nav-btn prev" data-card="3">‹</button>
-                                    <button class="card-nav-btn next" data-card="3">›</button>
+                                    <span class="card-org-name">Organization Name 3</span>
                                 </div>
                             </div>
                         </div>
@@ -216,21 +183,10 @@
                         <!-- Card 4 -->
                         <div class="card-container">
                             <div class="card-content">
-                                <div class="card-pages" data-card="4">
-                                    <div class="card-page active">
-                                        <p>Description for project 4 goes here.</p>
-                                    </div>
-                                    <div class="card-page">
-                                        <p>Additional information about project 4.</p>
-                                    </div>
-                                </div>
+                                <p>Description for work experience 4 goes here.</p>
                                 <div class="card-footer">
-                                    <div class="card-dots" data-card="4"></div>
                                     <img src="https://via.placeholder.com/40" alt="Icon" class="card-icon">
-                                </div>
-                                <div class="card-nav">
-                                    <button class="card-nav-btn prev" data-card="4">‹</button>
-                                    <button class="card-nav-btn next" data-card="4">›</button>
+                                    <span class="card-org-name">Organization Name 4</span>
                                 </div>
                             </div>
                         </div>
